<resources>
    <string name="app_name">Calculator</string>
    <string name="operate">operate</string>
    <string name="equal">=</string>
    <string name="clear">Clear</string>
    <string name="zero">0</string>
    <string name="nine">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="addition">Addition</string>
    <string name="subraction">Subraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="devision">Devision</string>
</resources>