<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/editText"
        android:inputType="number"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:padding="20dp"/>


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="204dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/_2"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="204dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:layout_marginStart="290dp"
        android:layout_marginTop="200dp"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="204dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/_4"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="277dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="286dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
       android:layout_marginStart="290dp"
        android:layout_marginTop="30dp"
        android:text="@string/_6"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="285dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:layout_below="@id/button4"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="359dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/_8"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="359dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button6"
        android:layout_marginStart="290dp"
        android:layout_marginTop="30dp"
        android:text="@string/nine"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="359dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_below="@id/button9"
        android:layout_marginStart="290dp"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_below="@id/button7"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="177dp"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:layout_below="@id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operate"
        android:layout_below="@id/button11"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="511dp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:layout_below="@id/button12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="193dp"
        tools:layout_editor_absoluteY="511dp" />
</RelativeLayout>